--- a/app/src/main/res/layout/activity_disaster_create.xml
+++ b/app/src/main/res/layout/activity_disaster_create.xml
@@ -46,7 +46,7 @@
             android:layout_weight="1"
             android:text="Afeti Gönder"
             android:textColor="@color/black"
-            app:backgroundTint="#BFBFBF"
+            app:backgroundTint="#9CCC65"
             app:iconTint="#FFFFFF">
 
         </Button>
