--- a/app/src/main/res/layout/activity_authorized_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_authorized_nav_drawer.xml
@@ -183,6 +183,27 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/BildirimGonder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:onClick="ClickNotificationSend">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Bildirim Oluştur"
+            android:padding="12dp"
+            android:layout_marginStart="16dp"
+            tools:ignore="Suspicious0dp"
+            android:layout_marginLeft="16dp">
+
+        </TextView>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
