--- a/app/src/main/res/layout/activity_authorized_create_team.xml
+++ b/app/src/main/res/layout/activity_authorized_create_team.xml
@@ -105,7 +105,39 @@
 
     </LinearLayout>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0"></Space>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_weight="0"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        tools:ignore="MissingConstraints">
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Geri"
+            android:textSize="8dp"
+            android:textColor="#FFF"
+            android:layout_weight="1"
+            android:background="#000"
+            android:textStyle="bold"
+            android:id="@+id/btn_returnTo_assignTeam">
+        </Button>
+        <Space
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0"></Space>
+
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
