--- a/app/src/main/res/layout/activity_tool_assign_team.xml
+++ b/app/src/main/res/layout/activity_tool_assign_team.xml
@@ -1,86 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#BFBFBF"
+    tools:context=".Authorized_Edit_Team">
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="0"></Space>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            tools:ignore="MissingConstraints">
 
                 <Button
-                    android:id="@+id/button2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Takımı Düzenle"
+                    android:textSize="8dp"
+                    android:textColor="#FFF"
+                    android:background="#6464"
                     android:layout_weight="1"
-                    android:text="Button" />
+                    android:textStyle="bold"
+                    android:id="@+id/btn_team_edit">
+                </Button>
+
+                <Space
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0"></Space>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Takım Oluştur"
+                    android:textSize="8dp"
+                    android:textColor="#FFF"
+                    android:background="#6464"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:id="@+id/btn_team_create">
+                </Button>
+
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_team_create"
-            android:layout_width="wrap_content"
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_weight="0"></Space>
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Takım Oluştur"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.949"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.142" />
-        <Button
-            android:id="@+id/btn_team_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Takım Düzenle"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.332"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.142" />
+            android:text="Takımlar:"
+            android:paddingLeft="16dp"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:textSize="16sp">
+        </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"
-            android:orientation="horizontal">
+            android:layout_height="34dp"
+            android:layout_weight="0"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            tools:ignore="MissingConstraints">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="190dp"
-                    android:layout_weight="1"
-                    android:text="Takımlar:">
-
-                </TextView>
 
                 <Spinner
                     android:id="@+id/assignTeamSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="190dp"
+                    android:textColor="#000"
+                    android:background="#FFF"
                     android:layout_weight="1"></Spinner>
 
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_weight="0"></Space>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-                <Button
-                    android:id="@+id/btn_assignTeamComplete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Takım Ata"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            tools:ignore="MissingConstraints">
 
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Takımı ata"
+                    android:textSize="8dp"
+                    android:textColor="#FFF"
+                    android:background="#6464"
                     android:layout_weight="1"
-                    android:layout_marginTop="600dp" />
+                    android:textStyle="bold"
+                    android:id="@+id/btn_assignTeamComplete">
+                </Button>
 
         </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
